# posttraining-math-tutor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  WORKFLOW.md  package-lock.json  package.json
.cursor/agents/: venv-lib-explorer.md
apps/api/: README.md  env.example  pyproject.toml
apps/api/src/: __init__.py  main.py  policy.py  schemas.py
apps/api/src/models/: __init__.py  base.py  ollama.py
apps/api/src/routes/: __init__.py  chat.py
apps/web/: env.example  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chat/: route.ts
apps/web/src/components/: index.ts
apps/web/src/components/chat/: ChatArea.tsx  ChatInput.tsx  index.ts
apps/web/src/components/layout/: Header.tsx
apps/web/src/components/settings/: SettingsPanel.tsx  index.ts
apps/web/src/lib/: utils.ts
apps/web/src/types/: index.ts
